# cmfy-rs

./: <stdout>  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  release.yml
lib/: Cargo.toml
lib/src/: client.rs  lib.rs  status.rs  websocket.rs
lib/src/dto/: history.rs  mod.rs  prompt.rs  queue.rs  websocket.rs
macros/: Cargo.toml
macros/src/: lib.rs
nodes/: Cargo.toml
nodes/src/: lib.rs
src/: client.rs  dto.rs  main.rs
src/cli/: io.rs  list.rs  main.rs  output.rs
src/cli/commands/: capture.rs  clear.rs  extract.rs  get.rs  history.rs  list.rs  listen.rs  mod.rs  open.rs  queue.rs  stats.rs  submit.rs  view.rs
src/cli/io/: input.rs  mod.rs  output.rs
src/commands/: cancel.rs  capture.rs  clear.rs  download.rs  extract.rs  history.rs  list.rs  listen.rs  mod.rs  monitor.rs  queue.rs  stats.rs  submit.rs  view.rs
src/dto/: history.rs
src/lib/: client.rs  lib.rs  status.rs
src/lib/dto/: history.rs  mod.rs  prompt.rs  queue.rs  ws.rs
src/lib/nodes/: ksampler.rs  loraloader.rs  mod.rs
