[package]
name = "cmfy-cli"
version = "0.4.1"
edition = "2021"
authors = ["Cédric Meuter <cedric.meuter@gmail.com>"]
description = "A CLI companion app for Comfy UI"
readme = "README.md"
license = "MIT"
keywords = ["comfy", "comfyui", "comfy-ui"]
homepage = "https://github.com/meuter/cmfy-rs"
repository = "https://github.com/meuter/cmfy-rs"

[[bin]]
name = "cmfy"
path = "src/main.rs"

[workspace]
members = ["nodes", "macros", "lib"]

[dependencies]
clap = { version = "4.5.20", features = ["derive", "env"] }
clio = { version = "0.3.5", features = ["clap", "clap-parse"] }
cmfy = { version = "0.4.0", path = "lib" }
cmfy-nodes = { version = "0.4.0", path = "nodes" }
colored = "2.1.0"
enum_dispatch = "0.3.13"
humansize = "2.1.3"
humantime = "2.1.0"
indicatif = "0.17.8"
itertools = "0.13.0"
open = "5.3.0"
png = "0.17.14"
rand = "0.8.5"
range-parser = "0.1.2"
reqwest = "0.12.8"
ring = "0.17.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
uuid = "1.11.0"
