[package]
name = "cmfy-cli"
version = "0.5.0-wip"
edition = "2021"
authors = ["Cédric Meuter <cedric.meuter@gmail.com>"]
description = "A CLI companion app for Comfy UI"
readme = "README.md"
license = "MIT"
keywords = ["comfy", "comfyui", "comfy-ui"]
homepage = "https://github.com/meuter/cmfy-rs"
repository = "https://github.com/meuter/cmfy-rs"

[[bin]]
name = "cmfy"
path = "src/main.rs"

[workspace]
members = ["nodes", "macros", "lib"]

[dependencies]
clap = { version = "4.5.29", features = ["derive", "env"] }
clio = { version = "0.3.5", features = ["clap", "clap-parse"] }
cmfy = { version = "0.5.0-wip", path = "lib" }
cmfy-nodes = { version = "0.5.0-wip", path = "nodes" }
colored = "3.0.0"
enum_dispatch = "0.3.13"
humansize = "2.1.3"
humantime = "2.1.0"
indicatif = "0.17.11"
itertools = "0.14.0"
open = "5.3.2"
png = "0.17.16"
rand = "0.9.0"
range-parser = "0.1.2"
reqwest = "0.12.12"
ring = "0.17.8"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
uuid = "1.13.1"
