[package]
name = "cmfy"
version = "0.5.0-wip"
edition = "2021"
authors = ["Cédric Meuter <cedric.meuter@gmail.com>"]
description = "A CLI companion app for Comfy UI"
readme = "../README.md"
license = "MIT"
keywords = ["comfy", "comfyui", "comfy-ui"]
homepage = "https://github.com/meuter/cmfy-rs"
repository = "https://github.com/meuter/cmfy-rs"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
colored = "3.0.0"
futures-util = "0.3.31"
http = "1.4.0"
itertools = "0.14.0"
rand = "0.9.2"
reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_urlencoded = "0.7.1"
tokio = "1.48.0"
tokio-websockets = { version = "0.13.1", features = [ "client", "native-tls", "rand", "ring" ] }
