[package]
name = "cmfy-macros"
version = "0.5.0-wip"
edition = "2021"
authors = ["Cédric Meuter <cedric.meuter@gmail.com>"]
description = "A CLI companion app for Comfy UI"
readme = "../README.md"
license = "MIT"
keywords = ["comfy", "comfyui", "comfy-ui"]
homepage = "https://github.com/meuter/cmfy-rs"
repository = "https://github.com/meuter/cmfy-rs"

[dependencies]
darling = "0.20.10"
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = "2.0.87"

[lib]
path = "src/lib.rs"
proc-macro = true
