[package]
name = "cmfy-macros"
version = "0.5.0-wip"
edition = "2021"
authors = ["Cédric Meuter <cedric.meuter@gmail.com>"]
description = "A CLI companion app for Comfy UI"
readme = "../README.md"
license = "MIT"
keywords = ["comfy", "comfyui", "comfy-ui"]
homepage = "https://github.com/meuter/cmfy-rs"
repository = "https://github.com/meuter/cmfy-rs"

[dependencies]
darling = "0.23.0"
proc-macro2 = "1.0.104"
quote = "1.0.42"
syn = "2.0.111"

[lib]
path = "src/lib.rs"
proc-macro = true
